Fix styling issues and improve readability

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -115,7 +115,7 @@ body {
         &:first-child {
           text-align: right;
 
-          width: 15%;
+          min-width: 6em;
           padding-right: 1em;
         }
 
@@ -127,10 +127,6 @@ body {
           &:hover {
             text-decoration: none;
           }
-        }
-
-        * {
-          display: inline-block;
         }
       }
 
@@ -176,10 +172,6 @@ body {
       header {
         text-align: center;
 
-        h1, h2, h3, h4, h5, h6 {
-          margin: 0;
-          padding: 0;
-        }
         p {
           font-size: medium;
         }
