--- a/sass/light.scss
+++ b/sass/light.scss
@@ -34,16 +34,16 @@ body.light {
   }
 
   code {
-    background-color: #ccc !important;
+    background-color: none;
     padding: 4px;
   }
 
   pre code {
-    background-color: #333 !important;
+    background-color: none;
   }
 
   pre {
-    background-color: #333 !important;
+    background-color: none;
     border: 1px solid black;
     border-top-width: 6px;
   }
